# drones-mapping

./: commit_msg_entropy  log.txt  rosgraph.dot
src/Guidance-SDK-ROS/calibration_files/: camera_params_left.yaml  camera_params_right.yaml
src/Guidance-SDK-ROS/launch/: openni_remote_map.launch  openni_remote_viz.launch  tf_camera_to_base.launch
src/Guidance-SDK-ROS/src/: GuidanceNodeCalibration.cpp
src/drones_move/: CMakeLists.txt  package.xml
src/drones_move/launch/: debug.launch  debug_wifi.launch  live.launch
src/drones_move/launch/debug/: freenect_throttle.launch  mapping.launch  visualization.launch  wg.world  world.launch
src/drones_move/launch/debug/config/: debug.rviz
src/drones_move/launch/live/config/: debug.rviz
src/drones_move/msg/: CostandGrid.msg
src/drones_move/nodes/: .controller.py.swo  .move_turtlebot.py.swo  AccessPointReader.py  botmover.py  config.py  controller.py  costgrid_combiner.py  localize_ap.py  mapcombiner.py  move_commands.py  move_turtlebot.py
src/drones_move/robots/: kobuki_hexagons_kinect.urdf.xacro
src/drones_move/srv/: MoveTurtlebot.srv
src/drones_move/unittest/: test_cases.py
src/drones_move/urdf/: turtlebot_library.urdf.xacro
src/drones_move/urdf/sensors/: kinect.urdf.xacro
src/guidancem100/: CMakeLists.txt  package.xml
src/guidancem100/src/: DJI_utility.h.gch  Makefile  log.txt  main  main.cpp  test.cpp
src/guidancem100/src/videos/: two-image.avi
src/rgbdslam_freiburg/.svn/: wc.db
src/rgbdslam_freiburg/rgbdslam/: manifest.xml
